# pywash-broomstick

./: Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: pywash.yml
matchers/: isort-matcher.json
tests/: bad-random.py  bad-streamlit.py  good-dicto-processing.py
